include/cqr_compact.h

/* QR factorization: on exit ap holds R (on/above the diagonal) and the
 * Householder vectors (below), taup holds the k = min(m,n) reflector scalars --
 * the LAPACK ?geqrf storage convention, one matrix per compact lane.
 *   layout   'C'/'c' column-major (tuned) or 'R'/'r' row-major
 *   m, n     rows, columns of A
 *   ap       compact A (m x n); overwritten with (R, Householder vectors)
 *   ldap     compact leading dimension (>= m col-major, >= n row-major)
 *   taup     compact tau output (k = min(m,n) per matrix, ld = k)
 *   V, nm    interleave width; total number of matrices (padded last group)
 * Returns 0, or -j (LAPACK sign convention) for an illegal j-th argument:
 *   -1 layout   -2 m (<0)   -3 n (<0)   -5 ldap   -7 V (not 2/4/8/16)   -8 nm (<0)
 */
int dgeqrf_compact(char layout, int m, int n, double *ap, int ldap, double *taup, int V,
                   int nm);
int sgeqrf_compact(char layout, int m, int n, float *ap, int ldap, float *taup, int V,
                   int nm);
/* Apply Q (or Q^T) of a compact QR to a compact RHS block from the left,
 * B := op(Q) B -- the reflector-application (side='L') step between a compact
 * QR factorization (?geqrf_compact) and a triangular solve.
 *   trans    'T' (Q^T B, the solve case) or 'N' (Q B)
 *   m, nrhs  rows of B (and A); columns of B
 *   k        number of reflectors (min(m,n) of the factorization)
 *   ap       compact reflectors from ?geqrf_compact, (ldap, k) per matrix
 *   ldap     compact leading dimension of A (>= m)
 *   taup     compact tau (k per matrix, ld = k)
 *   bp       compact B (m x nrhs), overwritten with op(Q) B
 *   ldbp     compact leading dimension of B (>= m)
 *   V, nm    interleave width; total number of matrices (padded last group)
 * Returns 0, or -j for an illegal j-th argument:
 *   -1 trans   -2 m (<0)   -3 nrhs (<0)   -4 k (<0 or >m)   -6 ldap
 *   -9 ldbp    -10 V (not 2/4/8/16)   -11 nm (<0)
 */
int dormqr_compact(char trans, int m, int nrhs, int k, const double *ap, int ldap,
                   const double *taup, double *bp, int ldbp, int V, int nm);
int sormqr_compact(char trans, int m, int nrhs, int k, const float *ap, int ldap,
                   const float *taup, float *bp, int ldbp, int V, int nm);
/* Cholesky factorization of a batch of symmetric positive-definite n x n
 * matrices A: A = L L^T (uplo 'L') or A = U^T U (uplo 'U'), one matrix per
 * compact lane. On exit the named triangle of ap holds its Cholesky factor; the
 * strictly-opposite triangle is neither referenced nor modified.
 *   layout   'C'/'c' column-major (tuned when lower) or 'R'/'r' row-major
 *   uplo     'L'/'l' factor/store the lower triangle L, or 'U'/'u' the upper U
 *   n        order of each A
 *   ap       compact A (n x n); the named triangle is overwritten with L or U
 *   ldap     compact leading dimension (>= n)
 *   V, nm    interleave width; total number of matrices (padded last group)
 * Positive-definiteness is assumed, not checked: a non-SPD lane yields NaN/Inf
 * in its factor rather than an error (see cqr_mkl_dpotrf_compact_design.md 6.2).
 * Returns 0, or -j (LAPACK sign convention) for an illegal j-th argument:
 *   -1 layout   -2 uplo   -3 n (<0)   -5 ldap (< max(1,n))
 *   -6 V (not 2/4/8/16)   -7 nm (<0)
 */
int dpotrf_compact(char layout, char uplo, int n, double *ap, int ldap, int V, int nm);
int spotrf_compact(char layout, char uplo, int n, float *ap, int ldap, int V, int nm);
/* LDL^T factorization, without pivoting, of a batch of symmetric n x n
 * matrices A: A = L D L^T (uplo 'L') or A = U^T D U (uplo 'U'), one matrix per
 * compact lane. L (U) is unit lower (upper) triangular and D diagonal. On exit
 * the diagonal of ap holds D and the strict off-diagonal of the named triangle
 * holds L or U (the unit diagonal is implied, not stored); the strictly-opposite
 * triangle is neither referenced nor modified. Note the upper convention is the
 * transpose dual A = U^T D U (as ?potrf's A = U^T U), not LAPACK ?sytrf's
 * A = U D U^T.
 *   layout   'C'/'c' column-major (tuned when lower) or 'R'/'r' row-major
 *   uplo     'L'/'l' factor/store the lower triangle, or 'U'/'u' the upper
 *   n        order of each A
 *   ap       compact A (n x n); the named triangle is overwritten with (D, L|U)
 *   ldap     compact leading dimension (>= n)
 *   V, nm    interleave width; total number of matrices (padded last group)
 * Indefinite matrices factor fine (no sqrt, so negative pivots are legal), but
 * there is no pivoting: a zero pivot -- a singular leading principal minor, not
 * merely a zero on the input diagonal -- yields Inf/NaN in that lane rather than
 * an error (see docs/cqr_mkl_dsytrfnp_compact_design.md 6.2).
 * Returns 0, or -j (LAPACK sign convention) for an illegal j-th argument:
 *   -1 layout   -2 uplo   -3 n (<0)   -5 ldap (< max(1,n))
 *   -6 V (not 2/4/8/16)   -7 nm (<0)
 */
int dsytrfnp_compact(char layout, char uplo, int n, double *ap, int ldap, int V, int nm);
int ssytrfnp_compact(char layout, char uplo, int n, float *ap, int ldap, int V, int nm);
/* Solve A X = B from the unpivoted LDL^T factor produced by ?sytrfnp_compact --
 * the step that closes the batched symmetric solve. Runs the three in-place
 * substitution sweeps per matrix (B is overwritten by X):
 *   uplo 'L' (A = L D L^T):  L z = B;   D w = z;   L^T X = w
 *   uplo 'U' (A = U^T D U):  U^T z = B; D w = z;   U   X = w
 *   layout   'C'/'c' column-major (tuned) or 'R'/'r' row-major
 *   uplo     triangle holding the factor, as passed to ?sytrfnp_compact
 *   n, nrhs  order of each A; number of right-hand sides (columns of B)
 *   ap       compact factored A from ?sytrfnp_compact (n x n per matrix)
 *   ldap     compact leading dimension of A (>= max(1, n))
 *   bp       compact B (n x nrhs), overwritten with X
 *   ldbp     compact leading dimension of B (>= n col-major, >= nrhs row-major)
 *   V, nm    interleave width; total number of matrices (padded last group)
 * A zero D(i) (singular lane) yields Inf/NaN in that lane's solution, not an
 * error. Returns 0, or -j for an illegal j-th argument:
 *   -1 layout   -2 uplo   -3 n (<0)   -4 nrhs (<0)   -6 ldap
 *   -8 ldbp     -9 V (not 2/4/8/16)   -10 nm (<0)
 */
int dsytrsnp_compact(char layout, char uplo, int n, int nrhs, const double *ap, int ldap,
                     double *bp, int ldbp, int V, int nm);
int ssytrsnp_compact(char layout, char uplo, int n, int nrhs, const float *ap, int ldap,
                     float *bp, int ldbp, int V, int nm);
/* Symmetric solve A X = B in one pass, without pivoting: ?sytrfnp_compact
 * followed by ?sytrsnp_compact, fused per group of V matrices so each factor is
 * solved with while still cache-resident and the whole solve is one threaded
 * group loop. Same arguments and error codes as ?sytrsnp_compact, except that
 * ap is the symmetric input A on entry and holds its (D, L|U) factor on exit
 * (exactly as ?sytrfnp_compact leaves it); bp is overwritten with X. The
 * result is bit-identical to the two separate calls. The LAPACK ?sysv
 * analogue, minus ipiv and workspace -- including for nrhs = 0, which still
 * factors ap (LAPACK ?sysv calls ?sytrf unconditionally; the nrhs quick
 * return is ?sytrs's): bp is then never referenced, though Fortran semantics
 * still want it present (a dummy suffices). */
int dsysvnp_compact(char layout, char uplo, int n, int nrhs, double *ap, int ldap,
                    double *bp, int ldbp, int V, int nm);
int ssysvnp_compact(char layout, char uplo, int n, int nrhs, float *ap, int ldap,
                    float *bp, int ldbp, int V, int nm);
/* Triangular solve with multiple right-hand sides -- the portable form of
 * mkl_?trsm_compact, the step that closes the batched QR solve. Solves in place
 *   op(A) X = alpha B   (side='L')   or   X op(A) = alpha B   (side='R'),
 * with A the order-s (s = m for side='L', n for side='R') unit/non-unit,
 * upper/lower triangular factor and op(A) = A ('N') or A^T ('T'/'C'). B (m x n)
 * is overwritten by X.
 *   layout   'C'/'c' column-major (tuned) or 'R'/'r' row-major
 *   side     'L' (op(A) X = alpha B) or 'R' (X op(A) = alpha B)
 *   uplo     'U' A upper triangular or 'L' A lower triangular
 *   transa   'N' (A) or 'T'/'C' (A^T; 'C' == 'T' for the real types)
 *   diag     'U' A has a unit diagonal (not read) or 'N' non-unit
 *   m, n     rows, columns of B (A is s x s, s = m for 'L', n for 'R')
 *   alpha    scalar multiplying B; alpha = 0 sets B := 0 (A not referenced)
 *   ap       compact triangular A (s x s per matrix)
 *   ldap     compact leading dimension of A (>= max(1, s))
 *   bp       compact B (m x n), overwritten with X
 *   ldbp     compact leading dimension of B (>= m col-major, >= n row-major)
 *   V, nm    interleave width; total number of matrices (padded last group)
 * Returns 0, or -j for an illegal j-th argument:
 *   -1 layout  -2 side   -3 uplo   -4 transa   -5 diag   -6 m (<0)   -7 n (<0)
 *   -10 ldap   -12 ldbp  -13 V (not 2/4/8/16)  -14 nm (<0)
 * (alpha, ap and bp are never inspected, matching LAPACK/BLAS.) */
int dtrsm_compact(char layout, char side, char uplo, char transa, char diag, int m, int n,
                  double alpha, const double *ap, int ldap, double *bp, int ldbp, int V,
                  int nm);
int strsm_compact(char layout, char side, char uplo, char transa, char diag, int m, int n,
                  float alpha, const float *ap, int ldap, float *bp, int ldbp, int V,
                  int nm);
/* Least-squares / minimum-norm solve of a batch of full-rank systems
 *   op(A) X = B,   op(A) = A ('N') or A^T ('T'/'C'),   A is m x n,
 * in one call per batch -- the compact form of LAPACK ?gels. With more rows than
 * columns op(A) X = B is overdetermined and X is the least-squares solution;
 * with more columns than rows it is underdetermined and X is the minimum-norm
 * solution. Per group of V matrices the routine factors A (QR when m >= n, LQ
 * when m < n), applies Q to B (fused into the factorization in the
 * least-squares case) and back-substitutes, on the group's cache-resident
 * buffers; a whole-batch ?geqrf_compact -> ?ormqr_compact -> ?trsm_compact
 * chain streams the batch three times instead.
 *   layout   'C'/'c' column-major (tuned) or 'R'/'r' row-major
 *   trans    'N' (A X = B) or 'T'/'C' (A^T X = B)
 *   m, n     rows, columns of A
 *   nrhs     columns of B and X
 *   ap       compact A (m x n); overwritten with its QR (m >= n) or LQ (m < n)
 *            factorization in the LAPACK ?geqrf / ?gelqf storage convention
 *   ldap     compact leading dimension of A (>= m col-major, >= n row-major)
 *   bp       compact B, max(m,n) x nrhs per matrix: on entry rows 0 .. (rows of
 *            op(A))-1 hold B; on exit rows 0 .. (columns of op(A))-1 hold X and,
 *            in the least-squares case, the remaining rows the residual (the
 *            squared column norms of rows n..m-1 are the residual sums of squares)
 *   ldbp     compact leading dimension of B (>= max(m,n) col-major, >= nrhs row-major)
 *   taup     compact tau output, exactly as ?geqrf_compact's (k = min(m,n) per
 *            matrix, ld = k): the reflector scalars of the factorization left in
 *            ap, so (ap, taup) is the (H, tau) that ?ormqr_compact accepts
 *   V, nm    interleave width; total number of matrices (padded last group)
 * min(m,n) = 0 sets B := 0 (the solution of an empty system), as LAPACK does;
 * ap and taup are then not referenced, though Fortran semantics still want
 * them present (a dummy suffices). nrhs = 0 computes
 * nothing at all: LAPACK ?gels's quick return covers min(m, n, nrhs) = 0, so
 * -- unlike ?posv/?sysv -- no factorization is performed (measured, not just
 * read from the reference source).
 * Rank deficiency is not detected (no info > 0): a zero diagonal of R divides
 * through to Inf/NaN in that lane, as in ?trsm.
 * Returns 0, or -j for an illegal j-th argument:
 *   -1 layout   -2 trans   -3 m (<0)   -4 n (<0)   -5 nrhs (<0)   -7 ldap
 *   -9 ldbp     -11 V (not 2/4/8/16)   -12 nm (<0)
 */
int dgels_compact(char layout, char trans, int m, int n, int nrhs, double *ap, int ldap,
                  double *bp, int ldbp, double *taup, int V, int nm);